// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component <Checkbox /> should render correctly when a custom component is not provided 1`] = `
<input
  data="[object Object]"
  style="font-size: 18px; cursor: pointer;"
  type="checkbox"
/>
`;

exports[`component <Checkbox component/> should render correctly with a custom checkbox 1`] = `
<div>
  25 schmeckles
</div>
`;

exports[`component <Checkbox component/> should render correctly with custom props 1`] = `
<input
  data="[object Object]"
  style="font-size: 18px; cursor: pointer;"
  test="false"
  type="checkbox"
/>
`;
